Remove navbar button and update contact information

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                 <li><a href="#hrms">HRMS</a></li>
                 <li><a href="#about">About</a></li>
             </ul>
-            <a href="#services" class="nav-cta">Build the new way</a>
         </div>
     </nav>
 
@@ -189,9 +188,9 @@
                         software? Reach out to us for a free consultation and quote.</p>
                     <div style="margin-top: 3rem;">
                         <p><i class="fas fa-envelope" style="color: var(--primary); margin-right: 1rem;"></i>
-                            hello@qevix.com</p>
+                            qevixinfosolutions@gmail.com</p>
                         <p style="margin-top: 1rem;"><i class="fas fa-phone"
-                                style="color: var(--primary); margin-right: 1rem;"></i> +1 (234) 567-890</p>
+                                style="color: var(--primary); margin-right: 1rem;"></i> +91 7907273149</p>
                     </div>
                 </div>
                 <div class="contact-form">
