Add letter-by-letter animation and Starfield Wave background

--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="spline-container">
-            <spline-viewer url="https://prod.spline.design/6Wq1Q7YGyMvqFlYI/scene.splinecode"></spline-viewer>
+            <spline-viewer url="https://prod.spline.design/K9neScf-PeS1xQW5/scene.splinecode"></spline-viewer>
         </div>
         <div class="hero-bg-overlay"></div>
         <div class="container">
             <div class="hero-content">
+                <div class="burst-container" id="radial-burst"></div>
                 <div class="glitch-wrapper">
                     <span class="badge" id="hero-badge">Architecting the Future</span>
                 </div>
-                <h1 class="futuristic-title">Build the<br>new way.</h1>
+                <h1 class="futuristic-title" id="hero-title">Build the<br>new way.</h1>
                 <p class="hero-subtext">Qevix Info Solutions brings advanced web architectures and intelligent mobile
                     ecosystems.</p>
                 <div class="hero-btns">
