Aurora Glow and Enhanced Particle Starfield for Hero Background

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="hero-bg-overlay"></div>
         <div class="container">
             <div class="hero-content">
+                <div class="aurora-bg"></div>
                 <div class="burst-container" id="radial-burst"></div>
                 <div class="glitch-wrapper">
                     <span class="badge" id="hero-badge">Architecting the Future</span>
